devops/kubernetes/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evogym-backend
  labels:
    app.kubernetes.io/name: evogym-backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: evogym-backend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
